# hive

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RETROSPECTIVE-v2.md  RETROSPECTIVE-v3.md  action-install.sh  install.sh  opencode.jsonc  spec.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docs-site.yml  release.yml  vscode-extension-release.yml  vscode-extension.yml  zed-extension.yml  zed-mirror-release.yml
.opencode/skills/: tarn-api-testing
demo-server/: Cargo.toml
demo-server/src/: main.rs
docs/: AI_WORKFLOW_DEMO.md  CONFORMANCE.md  HURL_MIGRATION.md  INDEX.md  LAUNCH_PLAYBOOK.md  MCP_WORKFLOW.md  RELEASE_VERIFICATION.md  TARN_COMPETITIVENESS_ROADMAP.md  TARN_LSP.md  TARN_PRODUCT_STRATEGY.md  TARN_VS_HURL_COMPARISON.md  TROUBLESHOOTING.md  VSCODE_EXTENSION.md  VSCODE_REMOTE.md  commands.json
docs/site/: 404.html  ai-workflows.html  ci-usage.html  cli-reference.html  examples.html  getting-started.html  index.html  mcp.html  overview.html  reference.html  styles.css  tarn-lsp.html  test-files.html  troubleshooting.html  writing-tests.html
editors/zed/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  extension.toml
editors/zed/languages/tarn/: config.toml  highlights.scm  runnables.scm  tasks.json
editors/zed/snippets/: tarn.json
editors/zed/src/: tarn.rs
examples/: assertions.tarn.yaml
hive/: Cargo.toml
tarn/: Cargo.toml
tarn-lsp/: Cargo.toml
tarn-mcp/: Cargo.toml
test2/: tarn.config.yaml
(+288 files in other folders)
