[workspace]

[package]
name = "zed_tarn"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Zed extension for Tarn — LSP adapter, grammar, snippets, tasks."
repository = "https://github.com/NazarKalytiuk/zed-tarn"

[lib]
path = "src/tarn.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
